// Copyright 2022 Mailchain Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.


syntax = "proto3";

package envelope;

// Use hosted location where the decryptedhash is the same as the location. Location and encrypted hash are encrypted so only receipient can location and verify the message.
message ZeroX01 {
    bytes UIBEncryptedLocationHash = 1;
    bytes encryptedHash = 2;
}

// Use hosted location where the encrypted hash is the same as the location. Location and decrypted hash are encrypted so only receipient can location and verify the message.
message ZeroX02 {
    bytes UIBEncryptedLocationHash = 1;
    bytes decryptedHash = 2;
}


// original message format
message ZeroX50 {
    int32 version = 1;
    bytes encryptedURL = 2;
    bytes decryptedHash = 3;
}
